--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Welcome to my Test Site!
-description: blah blah blah
+description: this should probably have actual info
